fix: x scrolling on mobile

--- a/themes/grimoire/source/css/index.styl
+++ b/themes/grimoire/source/css/index.styl
@@ -26,6 +26,7 @@ body
   box-shadow inset 0px 0px 200px rgba(0, 0, 0, .60)
   text-align center
   position relative
+  overflow-x hidden
 
 #bg
   position absolute
